[package]
name = "estacio_lido"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
